# hoopline

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Justfile  README.md  bacon.toml  docker-entrypoint.sh
.github/: copilot-instructions.md
.github/skills/fetching-pr-review-comments/: SKILL.md
.github/skills/minimalist-surgical-development/: SKILL.md
.github/skills/obra-executing-plans/: SKILL.md
.github/skills/obra-subagent-driven-development/: code-quality-reviewer-prompt.md
.github/skills/obra-test-driven-development/: SKILL.md
.github/skills/obra-verification-before-completion/: SKILL.md
.github/skills/root-cause-tracing/: SKILL.md
.github/skills/systematic-debugging/: SKILL.md
.github/skills/verification-before-completion/: SKILL.md
migrations/: 001_initial.sql
plans/: initial_plan.md  instructions.md  problem_description.md
src/: db.rs  error.rs  lib.rs  main.rs  models.rs
templates/: base.html  hello.html  index.html  slot_card.html  slots.html  user_selector.html
tests/: integration.rs
