[package]
name = "hoopline"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
askama = "0.15"
tokio = { version = "1.49", features = ["full"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
http-body-util = "0.1"
